--- a/app/src/main/res/layout/load_more.xml
+++ b/app/src/main/res/layout/load_more.xml
@@ -7,7 +7,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:indeterminate="true"
